@@ -180,7 +180,21 @@ enum  utilVarType {BOOLVAR=0,INTVAR,CHARVAR,MULTVAR,BADTYPE,DECIMALOUT,HEXOUT,OC
 #define	TOOL_INSERT_MASK 0b10111
 #define	TOOL_VIEW_OP 16
 
-enum toolEnums {TNAME=0,TCOMMAND,TCOMMENT,TINTERM,TFLAGS,TINPOPUP,TALWAYSPOPUP,TCLEARVIEW,TRUNASROOT,TUSEBAR,TSHORTCUTKEY};
+
+
+//enum toolEnums {TOOL_NAME=0,TOOL_COMMAND,TOOL_COMMENT,TOOL_IN_TERM,TOOL_FLAGS,TOOL_INPOPUP,TOOL_ALWAYS_IN_POPUP,TOOL_CLEAR_VIEW,TOOL_RUN_AS_ROOT,TOOL_USE_BAR,TSHORTCUTKEY};
+enum toolEnums {TOOL_ALWAYS_IN_POPUP=0,TOOL_CLEAR_VIEW,TOOL_COMMAND,TOOL_COMMENT,TOOL_FLAGS,TOOL_INPOPUP,TOOL_IN_TERM,TOOL_NAME,TOOL_RUN_AS_ROOT,TOOL_SHORTCUT_KEY,TOOL_USE_BAR,TOOL_END};
+//alwayspopup	1
+//clearview	0
+//command	echo '%d--%f--%t--%h--%i--%m' > /dev/pts/2
+//comment	test tool
+//flags	0
+//inpopup	0
+//interm	1
+//name	AAA Test
+//runasroot	0
+//shortcutkey	0
+//usebar	0
 
 #define MAXSESSIONS 24
 
